add blur effect in opened menu

--- a/src/pug/contact.pug
+++ b/src/pug/contact.pug
@@ -6,9 +6,9 @@ block title
 block content
   // Main contact page content
   main
-    div.uk-height-large.uk-background-cover.uk-light.uk-flex.uk-flex-center.uk-flex-middle(uk-parallax="bgy: -200" style="background-image: url('img/title.jpg');")
-      h1.uk-text-center.uk-margin-auto Headline
-      ul.uk-breadcrumb.my-breadcrumb
+    div.uk-height-large.uk-background-cover.uk-light.uk-flex.uk-flex-center.uk-flex-column(uk-parallax="bgy: -50" style=`background-image: url("img/title.jpg");`)
+      h1.uk-text-center(uk-parallax="y: -100") Headline
+      ul.uk-flex.uk-flex-center.uk-breadcrumb.my-breadcrumb(uk-parallax="y: -100")
         li Главная
         li Котакты
 
