--- a/src/pug/model/nav.pug
+++ b/src/pug/model/nav.pug
@@ -1,6 +1,6 @@
-header.header.uk-margin.uk-padding.uk-padding-remove-vertical
+header.header.uk-padding.uk-padding-remove-vertical
   // Menu
-  nav.uk-navbar-container.uk-navbar-transparent(uk-navbar="mode: click")
+  nav.uk-navbar-container.uk-navbar-transparent(uk-navbar="mode: click" esc-close)
     div.uk-navbar-left
       a.uk-navbar-item.uk-logo.my-nav-logo(href='/')
         span t
