--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,6 +9,8 @@
 // Import responsive class
 //@import 'responsive';
 
+@import url(https://fonts.googleapis.com/css?family=Poppins:400,500,600,700);
+
 // 1. Import main styles
 @import "./reset";
 @import "./variables";
