--- a/src/scss/model/header.scss
+++ b/src/scss/model/header.scss
@@ -1,3 +1,5 @@
+$svgfilter: url("/img/bgblur.svg#svgfilter");
+
 .my-nav-logo,
 .my-nav-menu {
   font-size: 20px;
@@ -44,6 +46,21 @@
   }
 }
 
+
+header > nav, main {
+}
+
+.uk-offcanvas-container {
+  header > nav, main {
+    transition: filter .2s linear;
+
+    -webkit-filter: blur(4px);
+    -moz-filter: blur(3px);
+    filter: $svgfilter;
+    filter: blur(3px);
+  }
+}
+
 .my-nav-link {
   li:nth-last-child(2) {
     margin-bottom: 20px;
@@ -52,11 +69,19 @@
 
 .my-offcanvas-nav {
 
+
+  &.uk-offcanvas-overlay {
+
+  }
+
   &.uk-open {
     .uk-offcanvas-slide {
-      border-right: 1px solid black;
+      //border-right: 1px solid black;
 
       &::before {
+
+        transition: filter .1s linear;
+
         z-index: -1;
         display: block!important;
         content: "";
@@ -64,10 +89,16 @@
         top: 0;
         left: 0;
         height: 100%;
-        width: 390px;
-        background: $my-primary;
-        border-right: 1px solid black;
+        //width: 390px;
+//        background: $my-primary;
+        //border-right: 1px solid black;
+
+        -webkit-filter: blur(5px);
+        -moz-filter: blur(5px);
+        filter: $svgfilter;
+        filter: blur(5px);
       }
+
     }
   }
 
