--- a/src/scss/_utilite.scss
+++ b/src/scss/_utilite.scss
@@ -2,24 +2,50 @@
 
 .my-mouse {
   position: absolute;
-  transition: all 1s ease-in-out;
-  width: 20px;
-  height: 42px;
+  transition: all 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  width: 28px;
+  height: 50px;
   bottom: 40px;
   left: 50%;
   transform: translateX(-50%);
   margin-left: -12px;
   border-radius: 15px;
-  border: 2px solid #888;
+  //border: 2px solid #888;
+  box-shadow: 0px -6px 10px rgba(255, 255, 255, 1), 0px 4px 15px rgba(0, 0, 0, 0.15);
   -webkit-animation: intro 1s;
   animation: intro 1s;
+
+  &:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    border-radius: 15px;
+  }
+
+  &:focus {
+    border: none;
+    outline: 0 !important;
+    outline-style: none;
+  }
+
+  &:hover, &:active {
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.02);
+    &:after {
+      box-shadow: inset 0px -2px 5px rgb(255, 255, 255),
+      inset 0px 2px 5px rgba(0, 0, 0, 0.15);
+    }
+  }
 
   & .scroll {
     display: block;
     width: 3px;
     height: 3px;
     margin: 6px auto;
-    border-radius: 4px;
+    border-radius: 6px;
     background: $my-primary;
     -webkit-animation: finger 2s infinite;
     animation: finger 2s infinite;
