add menu svg animated action

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,7 +6,10 @@ block title
 block content
   // Main start page content
   main.text-container
-    section.uk-flex.uk-flex-center.uk-flex-middle(uk-height-viewport="offset-top: true")
+    section.uk-flex.uk-flex-center.uk-flex-column.uk-flex-middle(uk-height-viewport="offset-top: true")
+      div.my-intro-text.text
+        .content
+        //.cursor
       ul.uk-breadcrumb.my-futures
         li Веб разработка
         li Консалтинг
