--- a/src/pug/model/footer.pug
+++ b/src/pug/model/footer.pug
@@ -40,6 +40,6 @@ footer.uk-margin.uk-padding.uk-cover-container
             ];
           each item in footerSocialIcon
             li
-              a.uk-icon-button(href=item.url uk-icon=item.icon title=item.title target="_blank" uk-tooltip=item.title)
+              a.uk-icon-button(href=item.url uk-icon=item.icon title=item.title target="_blank")
         p.copy Copyright &copy; 2016 by
           a.underbar(href='/') Teri Fash
