--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,6 +4,7 @@ $global-font-family: "Poppins", Roboto, "Helvetica Neue", Arial, "Noto Sans", sa
 
 $my-primary: #ee6058;
 $my-text-color: #6D7587;
+$my-black: #393939;
 
 $navbar-nav-item-height: 60px;
 
@@ -14,4 +15,4 @@ $offcanvas-bar-background: #f2f2f2;
 
 $card-primary-background: $my-primary;
 
-$my_neumorphic-shadow: 20;
+$my-neumorphic-shadow: 20;
