--- a/src/pug/model/footer.pug
+++ b/src/pug/model/footer.pug
@@ -1,5 +1,5 @@
 // Footer
-footer.uk-margin.uk-padding.uk-cover-container
+footer.uk-padding.uk-cover-container
   div.uk-grid-collapse.uk-text-center(class="uk-child-width-expand@s" uk-grid uk-height-match="target: > div > div >.uk-list")
     div
       div.uk-padding.uk-light.my-footer-contact
