--- a/src/pug/model/layout.pug
+++ b/src/pug/model/layout.pug
@@ -5,6 +5,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     block title
   body
-    include nav.pug  
-    block content
-    include footer.pug
+    div.my-page
+      include nav.pug
+      block content
+      include footer.pug
