--- a/src/pug/model/nav.pug
+++ b/src/pug/model/nav.pug
@@ -34,13 +34,13 @@ header.header.uk-padding.uk-padding-remove-vertical
           li.uk-active
             a(href='/') Главная
           li
-            a(href="#") Обо мне
+            a(href="/narrate.html") Обо мне
           li
-            a(href="#") Услуги
+            a(href="/services.html") Услуги
           li
-            a(href="#") Проекты
+            a(href="/project.html") Проекты
           li
-            a(href="/contact.html") Контакты
+            a(href="/solutions.html") Решения
           li.uk-nav-divider
         // Menu list social
         ul.uk-iconnav.my-social-icon
