--- a/src/pug/model/nav.pug
+++ b/src/pug/model/nav.pug
@@ -5,7 +5,7 @@ header.header.uk-padding.uk-padding-remove-vertical
       a.uk-navbar-item.uk-logo.my-nav-logo(href='/')
         span t
         span f
-    div.uk-navbar-right
+    div.uk-navbar-right.my-nav
       a.uk-navbar-item.my-nav-menu(href="#my-menu" uk-toggle="target: #my-menu")
         div.hamburger#hamburger
           .burger-icon
@@ -24,6 +24,10 @@ header.header.uk-padding.uk-padding-remove-vertical
           .path-burger
             .animate-path
               .path-rotation
+      a.uk-navbar-item.my-nav-list(href="/narrate.html") Обо мне
+      a.uk-navbar-item.my-nav-list(href="/services.html") Услуги
+      a.uk-navbar-item.my-nav-list(href="/project.html") Проекты
+      a.uk-navbar-item.my-nav-list(href="/solutions.html") Решения
 
   div.my-offcanvas-nav#my-menu(uk-offcanvas="overlay: true; mode: slide;")
     div.uk-offcanvas-bar.uk-flex.uk-flex-column.uk-flex-center
