--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -34,6 +34,9 @@
 @import "utilite";
 @import "model/header";
 @import "model/footer";
+@import "model/modal";
+
+@import "elements/buttons";
 
 @import "content";
 
