--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -9,6 +9,12 @@ $my-black: #393939;
 $my-white: #EBECF0;
 $my-neumorphic-shadow: 20;
 
+$ruler: 16px;
+$color-red: #AE1100;
+$color-bg: #EBECF0;
+$color-shadow: #BABECC;
+$color-white: #FFF;
+
 $navbar-nav-item-height: 60px;
 
 $offcanvas-bar-color-mode: dark;
