--- a/src/pug/model/footer.pug
+++ b/src/pug/model/footer.pug
@@ -1,45 +1,90 @@
 // Footer
 footer.uk-padding.uk-cover-container
-  div.uk-grid-collapse.uk-text-center(class="uk-child-width-expand@s" uk-grid uk-height-match="target: > div > div >.uk-list")
-    div
-      div.uk-padding.uk-light.my-footer-contact
-        ul.ul-list.underbar
-          -
-            let footerContact = [
-              { url: 'tel:+380631791411', icon: 'icon: receiver', title: '(+38) 063 17 91 411' },
-              { url: 'tel:+380964648422', icon: '', title: '(+38) 096 46 48 422' },
-              { url: 'mailto:teri.fash@google.com', icon: 'icon: mail', title: 'teri.fash@google.com' },
-              { url: '/', icon: 'icon: whatsapp', title: 'Teri Fash' }
-            ];
-          each item in footerContact
-            li
-              a(href=item.url uk-icon=item.icon) #{item.title}
-    div
-      div.uk-padding.uk-light.my-footer-article
-        ul.ul-list.underbar
-          -
-            let footerArticle = [
-              { url: '/article/', title: 'Сайт визитка' },
-              { url: '/article/', title: 'Логотип' },
-              { url: '/article/', title: 'Магазин' },
-              { url: '/article/', title: 'Фирменный стиль' },
-              { url: '/article/', title: 'Landing page' }
-            ];
-          each item in footerArticle
-            li
-              a(href=item.url) #{item.title}
-    div
-      div.uk-padding.uk-light.my-footer-social
-        ul.ul-list.uk-iconnav.my-social-icon
-          -
-            let footerSocialIcon = [
-            { url: 'https://www.facebook.com/profile.php?id=100015717390714', icon: 'icon: facebook; ratio: 1.3', title: 'title: Facebook; pos: left' },
-            { url: 'https://github.com/TeriFash', icon: 'icon: github-alt; ratio: 1.3', title: 'title: GitHub; pos: top-left' },
-            { url: 'https://www.linkedin.com/in/teri-fash-006aa513a/', icon: 'icon: linkedin; ratio: 1.3', title: 'title: Linkedin; pos: top-right' },
-            { url: 'tg://resolve?domain=TeriFash', icon: 'icon: receiver; ratio: 1.3', title: 'title: Telegram; pos: right' }
-            ];
-          each item in footerSocialIcon
-            li
-              a.uk-icon-button(href=item.url uk-icon=item.icon title=item.title target="_blank")
-        p.copy Copyright &copy; 2016 by
-          a.underbar(href='/') Teri Fash
+  div.uk-grid-large.uk-grid-margin-large.uk-grid.uk-grid-stack(uk-grid)
+    div.uk-grid-margin.uk-first-column(class='uk-width-expand@m')
+      div.uk-margin
+        div.uk-child-width-1-1.uk-grid-large.uk-grid-match.uk-grid(uk-grid class='uk-child-width-1-3@s')
+          div.uk-light.my-footer-contact
+            ul.ul-list.underbar
+              -
+                let footerContact = [
+                { url: 'tel:+380631791411', icon: 'icon: receiver', title: '(+38) 063 17 91 411' },
+                { url: 'tel:+380964648422', icon: '', title: '(+38) 096 46 48 422' },
+                { url: 'mailto:teri.fash@google.com', icon: 'icon: mail', title: 'teri.fash@google.com' },
+                { url: '/', icon: 'icon: whatsapp', title: 'Teri Fash' }
+                ];
+              each item in footerContact
+                li
+                  a(href=item.url uk-icon=item.icon) #{item.title}
+          div.uk-light.my-footer-article
+            ul.ul-list.underbar
+              -
+                let footerArticle = [
+                { url: '/article/', title: 'Сайт визитка' },
+                { url: '/article/', title: 'Логотип' },
+                { url: '/article/', title: 'Магазин' },
+                { url: '/article/', title: 'Фирменный стиль' },
+                { url: '/article/', title: 'Landing page' }
+                ];
+              each item in footerArticle
+                li
+                  a(href=item.url) #{item.title}
+          div.uk-light.my-footer-social
+            ul.ul-list.uk-iconnav.my-social-icon
+              -
+                let footerSocialIcon = [
+                { url: 'https://www.facebook.com/profile.php?id=100015717390714', icon: 'icon: facebook; ratio: 1.3', title: 'title: Facebook; pos: left' },
+                { url: 'https://github.com/TeriFash', icon: 'icon: github-alt; ratio: 1.3', title: 'title: GitHub; pos: top-left' },
+                { url: 'https://www.linkedin.com/in/teri-fash-006aa513a/', icon: 'icon: linkedin; ratio: 1.3', title: 'title: Linkedin; pos: top-right' },
+                { url: 'tg://resolve?domain=TeriFash', icon: 'icon: receiver; ratio: 1.3', title: 'title: Telegram; pos: right' }
+                ];
+              each item in footerSocialIcon
+                li
+                  a.uk-icon-button(href=item.url uk-icon=item.icon title=item.title target="_blank")
+            p.copy Copyright &copy; 2016 by
+              a.underbar(href='/') Teri Fash
+
+
+    //div.uk-grid-collapse.uk-text-center(class="uk-child-width-expand@s" uk-grid uk-height-match="target: > div > div >.uk-list")
+    //  div
+    //    div.uk-padding.uk-light.my-footer-contact
+    //      ul.ul-list.underbar
+    //        -
+    //          let footerContact = [
+    //            { url: 'tel:+380631791411', icon: 'icon: receiver', title: '(+38) 063 17 91 411' },
+    //            { url: 'tel:+380964648422', icon: '', title: '(+38) 096 46 48 422' },
+    //            { url: 'mailto:teri.fash@google.com', icon: 'icon: mail', title: 'teri.fash@google.com' },
+    //            { url: '/', icon: 'icon: whatsapp', title: 'Teri Fash' }
+    //          ];
+    //        each item in footerContact
+    //          li
+    //            a(href=item.url uk-icon=item.icon) #{item.title}
+    //  div
+    //    div.uk-padding.uk-light.my-footer-article
+    //      ul.ul-list.underbar
+    //        -
+    //          let footerArticle = [
+    //            { url: '/article/', title: 'Сайт визитка' },
+    //            { url: '/article/', title: 'Логотип' },
+    //            { url: '/article/', title: 'Магазин' },
+    //            { url: '/article/', title: 'Фирменный стиль' },
+    //            { url: '/article/', title: 'Landing page' }
+    //          ];
+    //        each item in footerArticle
+    //          li
+    //            a(href=item.url) #{item.title}
+    //  div
+    //    div.uk-padding.uk-light.my-footer-social
+    //      ul.ul-list.uk-iconnav.my-social-icon
+    //        -
+    //          let footerSocialIcon = [
+    //          { url: 'https://www.facebook.com/profile.php?id=100015717390714', icon: 'icon: facebook; ratio: 1.3', title: 'title: Facebook; pos: left' },
+    //          { url: 'https://github.com/TeriFash', icon: 'icon: github-alt; ratio: 1.3', title: 'title: GitHub; pos: top-left' },
+    //          { url: 'https://www.linkedin.com/in/teri-fash-006aa513a/', icon: 'icon: linkedin; ratio: 1.3', title: 'title: Linkedin; pos: top-right' },
+    //          { url: 'tg://resolve?domain=TeriFash', icon: 'icon: receiver; ratio: 1.3', title: 'title: Telegram; pos: right' }
+    //          ];
+    //        each item in footerSocialIcon
+    //          li
+    //            a.uk-icon-button(href=item.url uk-icon=item.icon title=item.title target="_blank")
+    //      p.copy Copyright &copy; 2016 by
+    //        a.underbar(href='/') Teri Fash
