--- a/src/scss/_utilite.scss
+++ b/src/scss/_utilite.scss
@@ -11,6 +11,7 @@
   margin-left: -12px;
   border-radius: 15px;
   //border: 2px solid #888;
+  background: $global-background;
   box-shadow: 0px -6px 10px rgba(255, 255, 255, 1), 0px 4px 15px rgba(0, 0, 0, 0.15);
   -webkit-animation: intro 1s;
   animation: intro 1s;
