--- a/src/scss/model/footer.scss
+++ b/src/scss/model/footer.scss
@@ -1,8 +1,13 @@
 footer {
   background: $global-background;
 
+  > div {
+    margin-left: 0!important;
+  }
+
   [class*=my-footer] {
     color: $global-color;
+    padding: 0;
 
     a {
       color: inherit;
@@ -42,18 +47,15 @@ footer {
     }
   }
 
+
+
   .my-footer-social {
-
-    //padding-bottom: 0;
-
     display: flex;
     flex-direction: column;
     height: 100%;
     justify-content: space-between;
 
     .my-social-icon {
-
-      margin: 0 -20px;
       padding: 0;
 
       a {
@@ -63,6 +65,7 @@ footer {
     }
 
     .copy {
+      margin-top: 30px;
       a {
         margin-left: 5px;
       }
@@ -70,6 +73,8 @@ footer {
   }
 
   .my-footer-contact {
+    //padding: 30px 0;
+
     li {
       position: relative;
       padding-left: 40px;
@@ -90,6 +95,31 @@ footer {
           position: absolute;
         }
       }
+    }
+  }
+
+  @media (max-width: 760px) {
+
+  }
+
+}
+
+@media (max-width: 760px) {
+  footer {
+    .my-footer-article {
+      ul {
+        li {
+          justify-content: flex-start!important;
+        }
+      }
+    }
+
+    .my-footer-social {
+      width: 60%;
+    }
+
+    .copy {
+      margin-top: 50px;
     }
   }
 }
