--- a/src/scss/model/header.scss
+++ b/src/scss/model/header.scss
@@ -1,24 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-
-  &:focus {
-    outline: none;
-  }
-
-  &::-webkit-input-placeholder {
-    color: $my-black;
-  }
-
-  &::-moz-placeholder {
-    color: $my-black;
-  }
-}
-
-
 .my-nav-menu {
   font-size: 20px;
   text-transform: uppercase;
@@ -34,12 +13,13 @@
 
   & .my-nav-list {
     display: flex;
-    //color: $my-text-color;
     font-size: 16px;
-    //text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: 500;
-    &:focus, &:hover, &:active {
+
+    &:focus,
+    &:hover,
+    &:active {
       color: $my-text-color;
     }
   }
@@ -47,13 +27,15 @@
 
 .my-nav-logo {
   font-size: 20px;
-  color: $my-primary!important;
+  color: $my-primary !important;
   transition: color .3s ease-in-out;
   padding-left: 0;
   text-transform: uppercase;
   font-weight: bold;
 
-  &:hover, &:visited, &:active {
+  &:hover,
+  &:visited,
+  &:active {
     color: $my-primary;
     opacity: .7;
   }
@@ -76,7 +58,6 @@
   @extend .my-transition;
 
   .hamburger {
-    //background: #000;
     transform: scale($scale);
     position: relative;
     display: block;
@@ -94,7 +75,6 @@
       left: 0;
       height: 68px;
       width: 68px;
-      // two masks because... browser support.
       mask: url(#mask);
       -webkit-mask-box-image: url(https://raygun.io/upload/mask.svg);
     }
@@ -107,7 +87,6 @@
       height: 68px;
     }
 
-    // what this does is create a small square that I then rotate behind an svg mask, giving the apparence of the line animating
     .path-rotation {
       height: 34px;
       width: 34px;
@@ -154,7 +133,7 @@
       .path {
         animation: dash-in $animation linear normal;
         animation-fill-mode: forwards;
-        stroke: #333;
+        stroke: $my-black;
       }
 
       .animate-path {
@@ -165,7 +144,7 @@
       .burger-bun-top,
       .burger-bun-bot,
       .burger-filling {
-        background: #333;
+        background: $my-black;
       }
     }
 
@@ -189,12 +168,15 @@
 
     @keyframes dash-in {
       0% {
+        //stroke: $my-black;
         stroke-dashoffset: 240;
       }
       40% {
+        //stroke: $my-black;
         stroke-dashoffset: 240;
       }
       100% {
+        //stroke: $my-black;
         stroke-dashoffset: 0;
       }
     }
@@ -250,7 +232,6 @@
       top: 12px;
     }
 
-
     // burger ring container
     .burger-ring {
       position: absolute;
@@ -268,7 +249,6 @@
         stroke: $global-color;
       }
     }
-
 
     // bun animations
     &.is-open {
@@ -438,26 +418,25 @@
       }
     }
 
-    &:hover, &:visited, &:active {
+    &:hover,
+    &:visited,
+    &:active {
       color: inherit;
     }
-
   }
-
 }
 
 .my-nav-link {
   li {
-
     min-height: 50px;
     max-height: 50px;
 
     &.uk-active {
       a {
-        color: #333 !important;
+        color: $my-black !important;
 
         &::after {
-          background: #333 !important;
+          background: $my-black !important;
           width: 115%;
         }
       }
@@ -490,25 +469,30 @@
         border-radius: 4px;
       }
 
-      &:focus, &:hover, &:active {
-        color: #333;
+      &:focus,
+      &:hover,
+      &:active {
+        color: $my-black;
       }
     }
 
-    &:hover, &:visited, &:active {
-      color: #333;
+    &:hover,
+    &:visited,
+    &:active {
+      color: $my-black;
 
       a {
-        color: #333;
+        color: $my-black;
 
         &:after {
-          background: #333;
+          background: $my-black;
           width: 115%;
-
         }
 
-        &:focus, &:hover, &:active {
-          color: #333;
+        &:focus,
+        &:hover,
+        &:active {
+          color: $my-black;
         }
       }
     }
@@ -547,7 +531,9 @@
       height: 20px;
     }
 
-    &:hover, &:visited, &:active {
+    &:hover,
+    &:visited,
+    &:active {
       color: $my-primary;
     }
   }
@@ -595,7 +581,8 @@
         outline-style: none;
       }
 
-      &:hover, &:active {
+      &:hover,
+      &:active {
         color: $my-text-color;
         // button state active
         box-shadow: 0 15px 20px rgba(0, 0, 0, 0.02);
